# pesaflow-ml

./: .dockerignore  .env.example  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  deploy.yml
airflow/dags/: aml_training_dag.py  fraud_training_dag.py  label_feedback_dag.py  semi_supervised_training_dag.py
bentoml_service/: bentofile.yaml  service.py
config/: model_config.yaml  service_config.yaml
docker/: Dockerfile
docs/: swe-integration-guide.md
feature_engineering/: aml_features.py  feature_registry.py  fraud_features.py  merchant_features.py  population_priors.py
governance/: bias_detector.py  model_validator.py
infrastructure/: init-ml-postgres.sh
migrations/: 001_initial_schema.sql  002_merchant_risk.sql  003_label_feedback_active_learning.sql
models/: anomaly_model.py  base.py  ensemble_model.py
models/aml/: aml_model.py
models/fraud/: fraud_model.py
models/merchant/: merchant_model.py
monitoring/: data_maturity.py  drift_detector.py  metrics.py  ssl_metrics.py  streaming_drift.py
requirements/: dev.txt  runtime.txt  training.txt
seeds/: ml_realistic_seed.sql  redis_online_seed.py  seed_all.sh
serving/app/: main.py  settings.py
tests/: curl_test.sh  pesaflow-ml.postman_collection.json  run_full_test.sh
tests/unit/: test_aml_scoring_service.py  test_data_maturity.py  test_decision_engine.py  test_drift_detector.py  test_drift_detector_full.py  test_feature_extractors.py  test_feature_registry.py  test_fraud_scoring_service.py  (+4 more)
training/: data_generator.py
(+54 files in other folders)
